--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
     "mime-types": "^2.1.24",
-    "yargs": "^14.0.0"
-  },
-  "devDependencies": {}
+    "yargs": "^14.0.0",
+    "cors": "^2.8.5"
+  }
 }
